- Martin 2007-02-22 
  - Now you can adjust the range of the Gnuplot-pictures of FHT in the config.php